--- a/index.html
+++ b/index.html
@@ -1,39 +1,1 @@
-Html Webpack Plugin:
-<pre>
-  Error: html-webpack-plugin could not minify the generated output.
-  In production mode the html minifcation is enabled by default.
-  If you are not generating a valid html output please disable it manually.
-  You can do so by adding the following setting to your HtmlWebpackPlugin config:
-  |
-  |    minify: false
-  |
-  See https://github.com/jantimon/html-webpack-plugin#options for details.
-  For parser dedicated bugs please create an issue here:
-  https://danielruf.github.io/html-minifier-terser/
-  Parse Error: <script nomodule src=“https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
-    <script>!function(e){function t(t){for(var n,i,a=t[0],c=t[1],l=t[2],f=0,p=[];f<a.length;f++)i=a[f],Object.prototype.hasOwnProperty.call(o,i)&&o[  i]&&p.push(o[i][0]),o[i]=0;for(n in c)Object.prototype.hasOwnProperty.call(c,n)&&(e[n]=c[n]);for(s&&s(t);p.length;)p.shift()();return u.push.apply  (u,l||[]),r()}function r(){for(var e,t=0;t<u.length;t++){for(var r=u[t],n=!0,a=1;a<r.length;a++){var c=r[a];0!==o[c]&&(n=!1)}n&&(u.splice(t--,1),e  =i(i.s=r[0]))}return e}var n={},o={1:0},u=[];function i(t){if(n[t])return n[t].exports;var r=n[t]={i:t,l:!1,exports:{}};return e[t].call(r.exports  ,r,r.exports,i),r.l=!0,r.exports}i.e=function(e){var t=[],r=o[e];if(0!==r)if(r)t.push(r[2]);else{var n=new Promise((function(t,n){r=o[e]=[t,n]}));  t.push(r[2]=n);var u,a=document.createElement("script");a.charset="utf-8",a.timeout=120,i.nc&&a.setAttribute("nonce",i.nc),a.src=function(e){retur  n i.p+"static/js/"+({}[e]||e)+"."+{3:"696b1254"}[e]+".chunk.js"}(e);var c=new Error;u=function(t){a.onerror=a.onload=null,clearTimeout(l);var r=o[  e];if(0!==r){if(r){var n=t&&("load"===t.type?"missing":t.type),u=t&&t.target&&t.target.src;c.message="Loading chunk "+e+" failed.\n("+n+": "+u+")"  ,c.name="ChunkLoadError",c.type=n,c.request=u,r[1](c)}o[e]=void 0}};var l=setTimeout((function(){u({type:"timeout",target:a})}),12e4);a.onerror=a.  onload=u,document.head.appendChild(a)}return Promise.all(t)},i.m=e,i.c=n,i.d=function(e,t,r){i.o(e,t)||Object.defineProperty(e,t,{enumerable:!0,ge  t:r})},i.r=function(e){"undefined"!==typeof Symbol&&Symbol.toStringTag&&Object.defineProperty(e,Symbol.toStringTag,{value:"Module"}),Object.define  Property(e,"__esModule",{value:!0})},i.t=function(e,t){if(1&t&&(e=i(e)),8&t)return e;if(4&t&&"object"===typeof e&&e&&e.__esModule)return e;var r=O  bject.create(null);if(i.r(r),Object.defineProperty(r,"default",{enumerable:!0,value:e}),2&t&&"string"!=typeof e)for(var n in e)i.d(r,n,function(t)  {return e[t]}.bind(null,n));return r},i.n=function(e){var t=e&&e.__esModule?function(){return e.default}:function(){return e};return i.d(t,"a",t),  t},i.o=function(e,t){return Object.prototype.hasOwnProperty.call(e,t)},i.p="/my-website/",i.oe=function(e){throw console.error(e),e};var a=this["w  ebpackJsonpmy-website"]=this["webpackJsonpmy-website"]||[],c=a.push.bind(a);a.push=t,a=a.slice();for(var l=0;l<a.length;l++)t(a[l]);var s=c;r()}([  ]);
-  //# sourceMappingURL=runtime-main.740d287d.js.map</script><script src="/my-website/static/js/2.28c22654.chunk.js"></script><script src="/my-websit  e/static/js/main.cc01535c.chunk.js"></script></body>
-  </html>
-  
-  - htmlparser.js:244 new HTMLParser
-    [my-website]/[html-minifier-terser]/src/htmlparser.js:244:13
-  
-  - htmlminifier.js:993 minify
-    [my-website]/[html-minifier-terser]/src/htmlminifier.js:993:3
-  
-  - htmlminifier.js:1354 Object.exports.minify
-    [my-website]/[html-minifier-terser]/src/htmlminifier.js:1354:16
-  
-  - index.js:1013 HtmlWebpackPlugin.minifyHtml
-    [my-website]/[html-webpack-plugin]/index.js:1013:46
-  
-  - index.js:429 HtmlWebpackPlugin.postProcessHtml
-    [my-website]/[html-webpack-plugin]/index.js:429:40
-  
-  - index.js:254 
-    [my-website]/[html-webpack-plugin]/index.js:254:25
-  
-  - task_queues:94 processTicksAndRejections
-    node:internal/process/task_queues:94:5
-  
-</pre>
+<!doctype html><html lang="en"><head><meta charset="utf-8"/><link rel="icon" href="/my-website/favicon.ico"/><meta name="viewport" content="width=device-width,initial-scale=1"/><meta name="theme-color" content="#000000"/><meta name="description" content="Web site created using create-react-app"/><link rel="apple-touch-icon" href="/my-website/logo192.png"/><link rel="manifest" href="/my-website/manifest.json"/><title>Sean Ottomanelli</title><link href="/my-website/static/css/main.acb93731.chunk.css" rel="stylesheet"></head><body><noscript>You need to enable JavaScript to run this app.</noscript><div id="root"></div><script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script><script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script><script>!function(e){function t(t){for(var n,i,a=t[0],c=t[1],l=t[2],f=0,p=[];f<a.length;f++)i=a[f],Object.prototype.hasOwnProperty.call(o,i)&&o[i]&&p.push(o[i][0]),o[i]=0;for(n in c)Object.prototype.hasOwnProperty.call(c,n)&&(e[n]=c[n]);for(s&&s(t);p.length;)p.shift()();return u.push.apply(u,l||[]),r()}function r(){for(var e,t=0;t<u.length;t++){for(var r=u[t],n=!0,a=1;a<r.length;a++){var c=r[a];0!==o[c]&&(n=!1)}n&&(u.splice(t--,1),e=i(i.s=r[0]))}return e}var n={},o={1:0},u=[];function i(t){if(n[t])return n[t].exports;var r=n[t]={i:t,l:!1,exports:{}};return e[t].call(r.exports,r,r.exports,i),r.l=!0,r.exports}i.e=function(e){var t=[],r=o[e];if(0!==r)if(r)t.push(r[2]);else{var n=new Promise((function(t,n){r=o[e]=[t,n]}));t.push(r[2]=n);var u,a=document.createElement("script");a.charset="utf-8",a.timeout=120,i.nc&&a.setAttribute("nonce",i.nc),a.src=function(e){return i.p+"static/js/"+({}[e]||e)+"."+{3:"696b1254"}[e]+".chunk.js"}(e);var c=new Error;u=function(t){a.onerror=a.onload=null,clearTimeout(l);var r=o[e];if(0!==r){if(r){var n=t&&("load"===t.type?"missing":t.type),u=t&&t.target&&t.target.src;c.message="Loading chunk "+e+" failed.\n("+n+": "+u+")",c.name="ChunkLoadError",c.type=n,c.request=u,r[1](c)}o[e]=void 0}};var l=setTimeout((function(){u({type:"timeout",target:a})}),12e4);a.onerror=a.onload=u,document.head.appendChild(a)}return Promise.all(t)},i.m=e,i.c=n,i.d=function(e,t,r){i.o(e,t)||Object.defineProperty(e,t,{enumerable:!0,get:r})},i.r=function(e){"undefined"!=typeof Symbol&&Symbol.toStringTag&&Object.defineProperty(e,Symbol.toStringTag,{value:"Module"}),Object.defineProperty(e,"__esModule",{value:!0})},i.t=function(e,t){if(1&t&&(e=i(e)),8&t)return e;if(4&t&&"object"==typeof e&&e&&e.__esModule)return e;var r=Object.create(null);if(i.r(r),Object.defineProperty(r,"default",{enumerable:!0,value:e}),2&t&&"string"!=typeof e)for(var n in e)i.d(r,n,function(t){return e[t]}.bind(null,n));return r},i.n=function(e){var t=e&&e.__esModule?function(){return e.default}:function(){return e};return i.d(t,"a",t),t},i.o=function(e,t){return Object.prototype.hasOwnProperty.call(e,t)},i.p="/my-website/",i.oe=function(e){throw console.error(e),e};var a=this["webpackJsonpmy-website"]=this["webpackJsonpmy-website"]||[],c=a.push.bind(a);a.push=t,a=a.slice();for(var l=0;l<a.length;l++)t(a[l]);var s=c;r()}([])</script><script src="/my-website/static/js/2.28c22654.chunk.js"></script><script src="/my-website/static/js/main.cc01535c.chunk.js"></script></body></html>
